@@ -1,5 +1,17 @@
 2007-02-07  Scott James Remnant  <scott@netsplit.com>
 
+	* init/main.c (read_state): Handle the Emission keyword; also handle
+	Event really being an EventEmission.
+	* init/event.c (event_emit): Make the next emission id a static global
+	(event_read_state, event_write_state): Serialise event emission
+	structures, not plain events; also send over the last id we used so
+	it appears seamless.  This doesn't yet handle the callback/data bit
+	of the serialisation, which turns out to be a little tricky ... oops
+	* init/event.h: Update.
+	* init/tests/test_event.c (test_read_state, test_write_state): Check
+	that serialisation is done with EventEmissions instead, and all the
+	fields are passed (except callback and data which are ... tricky).
+
 	* init/main.c (main): Call event_poll instead of event_queue_run.
 
 	* init/event.c (event_poll): Add the new function that replaces
